--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background: url('background.jpg') no-repeat center center fixed;
+            background: url('uploaded_image.jpg') no-repeat center center fixed;
             background-size: cover;
             margin: 0;
             padding: 0;
@@ -20,7 +20,7 @@
         }
 
         .container {
-            background: rgba(0, 0, 0, 0.6);
+            background: rgba(0, 0, 0, 0.7);
             border-radius: 8px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
             width: 90%;
@@ -84,13 +84,18 @@
         <button onclick="task3()">Coming Soon (Task 3)</button>
 
         <!-- Displaying IP and Country Information -->
-        <div class="result" id="result">
+        <div class="result" id="ip-country-result">
             Loading IP and Country Info...
         </div>
 
         <!-- Displaying Ad Count -->
         <div class="result" id="ads-counter">
             <strong>📊 Ads Seen:</strong> 0
+        </div>
+
+        <!-- Ad Display Section -->
+        <div class="result" id="ad-display">
+            No ads viewed yet.
         </div>
     </div>
 
@@ -106,12 +111,12 @@
                 const country = data.country;
 
                 // Display IP and Country info immediately on page load
-                document.getElementById("result").innerHTML = `
+                document.getElementById("ip-country-result").innerHTML = `
                     <strong>🌍 IP Address:</strong> ${ip}<br>
                     <strong>🏴 Country:</strong> ${country}
                 `;
             } catch (error) {
-                document.getElementById("result").innerHTML = "Error fetching IP and country info.";
+                document.getElementById("ip-country-result").innerHTML = "Error fetching IP and country info.";
             }
         }
 
@@ -130,14 +135,14 @@
         function task2() {
             incrementAdCount();
             const adLink = "https://your-ad-link.com"; // Replace with actual ad URL
-            document.getElementById("result").innerHTML = `
+            document.getElementById("ad-display").innerHTML = `
                 <strong>Ad ${adsCount}:</strong> <a href="${adLink}" target="_blank">Click here to view</a>
             `;
         }
 
         // Placeholder for Task 3
         function task3() {
-            document.getElementById("result").innerHTML = "Task 3 functionality is coming soon!";
+            document.getElementById("ad-display").innerHTML = "Task 3 functionality is coming soon!";
         }
     </script>
 </body>
