--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
     <div class="container">
         <h1>Bot Task Manager</h1>
-        <button onclick="autoShowAd()">Auto Ad Show</button>
+        <button onclick="startAutoAdShow()">Auto Ad Show</button>
         <button onclick="showAd()">Show Ad (Task 3)</button>
 
         <!-- Displaying IP and Country Information -->
@@ -101,6 +101,7 @@
 
     <script>
         let adsCount = 0;
+        let autoAdInterval; // Variable to store the interval for automatic ads
 
         // Fetch User IP and Country Using IP Geolocation
         async function getUserInfo() {
@@ -142,7 +143,7 @@
         }
 
         // Function to show an ad and increment view count
-        function autoShowAd() {
+        function showAd() {
             incrementAdCount();
             const adLink = "https://your-ad-link.com"; // Replace with actual ad URL
             document.getElementById("ad-display").innerHTML = `
@@ -150,13 +151,21 @@
             `;
         }
 
-        // Show a new ad each time Task 3 is clicked and update the view count
-        function showAd() {
-            incrementAdCount();
-            const adLink = "https://your-ad-link.com"; // Replace with actual ad URL
-            document.getElementById("ad-display").innerHTML = `
-                <strong>Ad ${adsCount}:</strong> <a href="${adLink}" target="_blank">Click here to view</a>
-            `;
+        // Start auto ad show when the button is clicked
+        function startAutoAdShow() {
+            // Start an interval to show ads automatically every 15 seconds
+            autoAdInterval = setInterval(() => {
+                incrementAdCount();
+                const adLink = "https://your-ad-link.com"; // Replace with actual ad URL
+                document.getElementById("ad-display").innerHTML = `
+                    <strong>Ad ${adsCount}:</strong> <a href="${adLink}" target="_blank">Click here to view</a>
+                `;
+            }, 15000); // 15 seconds interval for auto showing ads
+        }
+
+        // Stop auto ad show when the page is refreshed or the user decides to stop
+        function stopAutoAdShow() {
+            clearInterval(autoAdInterval);
         }
     </script>
 </body>
