--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bot Task Manager</title>
+    <title>Ad Manager</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -78,15 +78,15 @@
         .countdown {
             font-size: 18px;
             color: #FFD700;
-            margin-top: 10px;
         }
     </style>
 </head>
 <body>
 
     <div class="container">
-        <h1>Bot Task Manager</h1>
-        <button onclick="startAutoAd()">Auto Ad Show</button>
+        <h1>Ad Manager</h1>
+        <button onclick="showAd()">Show Ad</button>
+        <button onclick="startAutoAd()">Auto Show Ad</button>
 
         <!-- Displaying IP and Country Information -->
         <div class="result" id="ip-country-result">
@@ -104,26 +104,23 @@
         </div>
 
         <!-- Countdown Timer -->
-        <div id="countdown-timer" class="countdown"></div>
+        <div class="countdown" id="countdown">
+            Ad Countdown: 0 seconds
+        </div>
     </div>
 
     <script>
         let adsCount = 0;
-        let countdownInterval; // Variable for countdown timer
-        let autoAdInterval; // Variable for auto ad interval
-        let autoAdRunning = false; // Flag to track if auto ad is running
+        let autoAdInterval;
+        let adDuration = 15; // Ad duration in seconds
 
         // Fetch User IP and Country Using IP Geolocation
         async function getUserInfo() {
             try {
-                const response = await fetch("https://ipapi.co/json"); // Using a free API for IP and country info
-                if (!response.ok) {
-                    throw new Error(`HTTP Error: ${response.status}`);
-                }
-
+                const response = await fetch("https://ipinfo.io?token=YOUR_TOKEN_HERE");
                 const data = await response.json();
-                const ip = data.ip || "Unavailable";
-                const country = data.country_name || "Unavailable";
+                const ip = data.ip;
+                const country = data.country;
 
                 // Display IP and Country info immediately on page load
                 document.getElementById("ip-country-result").innerHTML = `
@@ -131,13 +128,7 @@
                     <strong>🏴 Country:</strong> ${country}
                 `;
             } catch (error) {
-                console.error("Error fetching IP and country:", error);
-
-                // Show error message
-                document.getElementById("ip-country-result").innerHTML = `
-                    <strong>Error:</strong> Unable to fetch IP and country information.<br>
-                    Please check your connection.
-                `;
+                document.getElementById("ip-country-result").innerHTML = "Error fetching IP and country info.";
             }
         }
 
@@ -152,49 +143,49 @@
             `;
         }
 
-        // Function to show a new ad
+        // Show Ad Function
         function showAd() {
             incrementAdCount();
             const adLink = "https://your-ad-link.com"; // Replace with actual ad URL
             document.getElementById("ad-display").innerHTML = `
                 <strong>Ad ${adsCount}:</strong> <a href="${adLink}" target="_blank">Click here to view</a>
             `;
-            startCountdown(15); // Start countdown for 15 seconds when a new ad is shown
         }
 
-        // Function to start the countdown for the ad display
-        function startCountdown(seconds) {
-            let remainingTime = seconds;
-            document.getElementById("countdown-timer").innerHTML = `Ad will change in: ${remainingTime} seconds`;
+        // Start Auto Ad Function
+        function startAutoAd() {
+            incrementAdCount();
+            autoShowAd();
+        }
 
-            countdownInterval = setInterval(() => {
+        // Auto Show Ads Every 15 seconds
+        function autoShowAd() {
+            const adLink = "https://your-ad-link.com"; // Replace with actual ad URL
+
+            // Show the ad and start the countdown timer
+            document.getElementById("ad-display").innerHTML = `
+                <strong>Ad ${adsCount}:</strong> <a href="${adLink}" target="_blank">Click here to view</a>
+            `;
+            document.getElementById("countdown").innerHTML = `Ad Countdown: ${adDuration} seconds`;
+
+            let remainingTime = adDuration;
+
+            // Countdown timer for ad display
+            const countdownInterval = setInterval(() => {
                 remainingTime--;
-                document.getElementById("countdown-timer").innerHTML = `Ad will change in: ${remainingTime} seconds`;
-
+                document.getElementById("countdown").innerHTML = `Ad Countdown: ${remainingTime} seconds`;
                 if (remainingTime <= 0) {
                     clearInterval(countdownInterval);
-                    setTimeout(() => {
-                        showAd(); // Automatically show new ad after the countdown ends
-                    }, 2000); // Wait for 2 seconds before showing a new ad
+                    incrementAdCount();
+                    // Wait for 2 seconds and show next ad automatically
+                    setTimeout(autoShowAd, 2000);
                 }
-            }, 1000); // Countdown interval set to 1 second
+            }, 1000);
         }
 
-        // Start the Auto Ad Show
-        function startAutoAd() {
-            if (!autoAdRunning) {
-                autoAdRunning = true;
-                showAd(); // Show the first ad immediately
-                autoAdInterval = setInterval(() => {
-                    showAd(); // Show a new ad every 15 seconds
-                }, 15000); // Show new ad every 15 seconds
-            }
-        }
-
-        // Clear the auto ad interval if needed
-        function stopAutoAd() {
-            clearInterval(autoAdInterval); // Stops the automatic ad showing
-            autoAdRunning = false;
+        // Placeholder for Task 3
+        function task3() {
+            document.getElementById("ad-display").innerHTML = "Task 3 functionality is coming soon!";
         }
     </script>
 </body>
