--- a/index.html
+++ b/index.html
@@ -2,6 +2,17 @@
 <html lang="en">
 <head>
 
+
+show_8578225().then(() => {
+    // You need to add your user reward function here, which will be executed after the user watches the ad.
+    // For more details, please refer to the detailed instructions.
+    alert('You have seen ad ad!');
+})
+        
+
+
+
+    
     <script src='//niphaumeenses.net/vignette.min.js' data-zone='8578096' data-sdk='show_8578096'></script>
 <script src='//niphaumeenses.net/vignette.min.js' data-zone='8578096' data-sdk='show_8578096'></script>
 
