--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <!-- Include Monetag Ad Scripts -->
     <script src='//niphaumeenses.net/vignette.min.js' data-zone='8578216' data-sdk='show_8578216'></script>
-    <script src='//niphaumeenses.net/vignette.min.js' data-zone='8578218' data-sdk='show_8578218'></script>
+    <script src='//niphaumeenses.net/vignette.min.js' data-zone='8578096' data-sdk='show_8578096'></script> <!-- Updated second ad script -->
 </head>
 <body style="font-family: Arial, sans-serif; background-color: #f4f4f4; display: flex; flex-direction: column; align-items: center; justify-content: center; height: 100vh;">
 
@@ -34,9 +34,9 @@
             });
         }
 
-        // Function to show Ad 2
+        // Function to show Ad 2 (Updated with new ad code)
         function showAd2() {
-            show_8578218().then(() => {
+            show_8578096().then(() => {
                 document.getElementById('ad-container').innerHTML = 'Ad 2 has been shown!';
             }).catch((error) => {
                 console.error('Error displaying Ad 2:', error);
